# BAMF_duplication

./: README.md  UA_tranliterated.csv  UA_transliterated.csv  graph_viz.html  main.py  pyproject.toml
create_dataset/: UA_paired.csv  create_dataset_names.py  create_paired_ua.py  create_tr_data.py  creating_transliterated_dataset.py  scraping_wiki_names.py  translit_llm.py  translit_tests_ua.py  ukr_female_names.csv  ukr_male_names.csv  ukr_surnames.csv
data/: UA_transliterated.csv  UA_transliterated_icu.csv
json_viz/: graph_data.json  graph_data_icu_UA.json  graph_data_kmu_UA.json  graph_data_llm.json  graph_data_llm_UA.json
scripts/: LLM_learned_transliteration.py  __init__.py  dataset_construction.py  icu_transliteration.py  levensthein_similarity.py  simple_transliteration.py  soundex_dupicate.py  test_DBSCAN_Levenshtein.py  test_levenshtein_speed.py  visualization.py
